--- a/index.css
+++ b/index.css
@@ -77,7 +77,7 @@ div#wrapper header span#back {
 div#wrapper section.essay {
     width: 70%;
     margin: auto;
-    margin-top: 60px;
+    margin-top: 40px;
     margin-bottom: 10px;
 }
 
@@ -91,12 +91,32 @@ div#wrapper section.essay h1 {
     margin-bottom: 40px;
 }
 
+div#wrapper section.essay h2 {
+    font-size: 1.1em;
+    font-weight: 500;
+    line-height: 1.2em;
+    letter-spacing: 0.03em;
+    color: #999;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+div#wrapper section.essay h2 a {
+    -moz-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+    -webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+    -ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+    border-bottom: solid 1px #e4e4e4;
+    color: #f3cd52;
+    text-decoration: none;
+}
+
 div#wrapper section.essay p {
     font-size: 1.1em;
     letter-spacing: 0.03em;
     line-height: 1.4em;
     color: #888;
-    margin-top: 2em;
+    margin-top: 1em;
     margin-bottom: 1em;
 }
 
@@ -131,7 +151,7 @@ div#wrapper section.essay p a:hover {
 }
 
 div#wrapper .bubbleChart {
-    min-width: 100px;
+    min-width: 120px;
     max-width: 900px;
     height: 800px;
     margin: 10px auto;
