Add the image of ExpMap

--- a/index.css
+++ b/index.css
@@ -88,7 +88,15 @@ div#wrapper section.essay h1 {
     letter-spacing: 0.03em;
     color: #777;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+}
+
+div#wrapper section.essay img {
+    display: block;
+    margin: auto;
+    margin-top: 0;
+    margin-bottom: 20px;
+    width: 120px;
 }
 
 div#wrapper section.essay h2 {
@@ -98,6 +106,7 @@ div#wrapper section.essay h2 {
     letter-spacing: 0.03em;
     color: #999;
     text-align: center;
+    margin-top: 40px;
     margin-bottom: 40px;
 }
 
