--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ div#wrapper {
     height:100%;
     margin:0px;
     padding:0px;
+    padding-bottom: 60px;
     width:100%;
     font-family: "Ubuntu", Helvetica, HelvaticaNeue, sans-serif;
     font-size: 1.0em;
